--- a/courses/courses.csproj
+++ b/courses/courses.csproj
@@ -1,4 +1,4 @@
-.gitignore<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
