--- a/authorization/authorization.csproj
+++ b/authorization/authorization.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts/"/>
+    <Folder Include="Controllers/"/>
+  </ItemGroup>
+
 </Project>
