Adding DB connection and DataContext to all services. Message and Profile services done. Courses models added. Services added

--- a/composition/composition.csproj
+++ b/composition/composition.csproj
@@ -12,6 +12,12 @@
 
   <ItemGroup>
     <Folder Include="Controllers/" />
+    <Folder Include="Contracts/" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
 
 </Project>
