--- a/authorization/authorization.csproj
+++ b/authorization/authorization.csproj
@@ -8,12 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts/"/>
-    <Folder Include="Controllers/"/>
+    <Folder Include="Contracts/" />
+    <Folder Include="Controllers/" />
+    <Folder Include="Models/" />
+    <Folder Include="Data/" />
   </ItemGroup>
 
 </Project>
